src/css/style.css
/* ... */
.skills .progress-bar
{
    background-color: #149ddd;
    height: 10px;
    transition: .9s;
    width: 1px;
}

/*--------------------------------------------------------------
# Resume
--------------------------------------------------------------*/

.resume .resume-title
{
    color: #050d18;
    font-size: 26px;
    font-weight: 700;
    margin-bottom: 20px;
    margin-top: 20px;
}

.resume .resume-item
{
    border-left: 2px solid #1f5297;
    margin-top: -2px;
    padding: 0 0 20px 20px;
    position: relative;
}

.resume .resume-item h4
{
    color: #050d18;
    font-family: "Poppins", sans-serif;
    font-size: 18px;
    font-weight: 600;
    line-height: 18px;
    margin-bottom: 10px;
    text-transform: uppercase;
}

.resume .resume-item h5
{
    background: #e4edf9;
    display: inline-block;
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 10px;
    padding: 5px 15px;
}

.resume .resume-item ul
{
    padding-left: 20px;
}

.resume .resume-item ul li
{
    padding-bottom: 10px;
}

.resume .resume-item:last-child
{
    padding-bottom: 0;
}

.resume .resume-item::before
{
    background: #fff;
    border: 2px solid #1f5297;
    border-radius: 50px;
    content: "";
    height: 16px;
    left: -9px;
    position: absolute;
    top: 0;
    width: 16px;
}

/*--------------------------------------------------------------
# Portfolio
--------------------------------------------------------------*/

.portfolio .portfolio-item
{
    margin-bottom: 30px;
}

.portfolio #portfolio-flters
{
    background: #fff;
    border-radius: 50px;
    list-style: none;
    margin: 0 auto 35px auto;
    padding: 0;
    padding: 2px 15px;
    text-align: center;
}

.portfolio #portfolio-flters li
{
    color: #272829;
    cursor: pointer;
    display: inline-block;
    font-size: 14px;
    font-weight: 600;
    line-height: 1;
    margin-bottom: 5px;
    padding: 10px 15px 8px 15px;
    text-transform: uppercase;
    transition: all 0.3s ease-in-out;
}

.portfolio #portfolio-flters li:hover,
.portfolio #portfolio-flters li.filter-active
{
    color: #149ddd;
}

.portfolio #portfolio-flters li:last-child
{
    margin-right: 0;
}

.portfolio .portfolio-wrap
{
    overflow: hidden;
    position: relative;
    transition: 0.3s;
    z-index: 1;
}

.portfolio .portfolio-wrap::before
{
    background: rgba( 255, 255, 255, 0.5 );
    bottom: 0;
    content: "";
    left: 0;
    opacity: 0;
    position: absolute;
    right: 0;
    top: 0;
    transition: all ease-in-out 0.3s;
    z-index: 2;
}

.portfolio .portfolio-wrap .portfolio-links
{
    bottom: -60px;
    display: flex;
    justify-content: center;
    left: 0;
    opacity: 1;
    position: absolute;
    right: 0;
    transition: all ease-in-out 0.3s;
    z-index: 3;
}

.portfolio .portfolio-wrap .portfolio-links a
{
    background: rgba( 20, 157, 221, 0.75 );
    color: #fff;
    font-size: 28px;
    text-align: center;
    transition: 0.3s;
    width: 50%;
}

.portfolio .portfolio-wrap .portfolio-links a:hover
{
    background: rgba( 20, 157, 221, 0.95 );
}

.portfolio .portfolio-wrap .portfolio-links a + a
{
    border-left: 1px solid #37b3ed;
}

.portfolio .portfolio-wrap:hover::before
{
    bottom: 0;
    left: 0;
    opacity: 1;
    right: 0;
    top: 0;
}

.portfolio .portfolio-wrap:hover .portfolio-links
{
    bottom: 0;
    opacity: 1;
}

/*--------------------------------------------------------------
# Services
--------------------------------------------------------------*/

.services .icon-box
{
    margin-bottom: 20px;
}

.services .icon
{
    align-items: center;
    background: #149ddd;
    border: 1px solid #149ddd;
    border-radius: 50%;
    display: flex;
    float: left;
    height: 54px;
    justify-content: center;
    transition: 0.5s;
    width: 54px;
}

.services .icon i
{
    color: #fff;
    font-size: 24px;
}

.services .icon-box:hover .icon
{
    background: #fff;
}

.services .icon-box:hover .icon i
{
    color: #149ddd;
}

.services .title
{
    font-size: 18px;
    font-weight: 700;
    margin-bottom: 15px;
    margin-left: 80px;
}

.services .title a
{
    color: #343a40;
}

.services .title a:hover
{
    color: #149ddd;
}

.services .description
{
    font-size: 14px;
    line-height: 24px;
    margin-left: 80px;
}

/*--------------------------------------------------------------
# Testimonials
--------------------------------------------------------------*/

.testimonials .testimonial-item
{
    box-sizing: content-box;
    min-height: 320px;
    text-align: center;
}

.testimonials .testimonial-item .testimonial-img
{
    border-radius: 50%;
    height: 90px;
    margin: 0 auto;
    object-fit: cover;
    width: 90px;
}

.testimonials .testimonial-item h3
{
    color: #111;
    font-size: 18px;
    font-weight: bold;
    margin: 10px 0 5px 0;
}

.testimonials .testimonial-item h4
{
    color: #999;
    font-size: 14px;
    margin: 0;
}

.testimonials .testimonial-item .quote-icon-left,
.testimonials .testimonial-item .quote-icon-right
{
    color: #c3e8fa;
    font-size: 26px;
}

.testimonials .testimonial-item .quote-icon-left
{
    display: inline-block;
    left: -5px;
    position: relative;
}

.testimonials .testimonial-item .quote-icon-right
{
    display: inline-block;
    position: relative;
    right: -5px;
    top: 10px;
}

.testimonials .testimonial-item p
{
    background: #fff;
    border-radius: 6px;
    box-shadow: 0px 2px 15px rgba( 0, 0, 0, 0.1 );
    font-style: italic;
    margin: 0 15px 15px 15px;
    margin-bottom: 35px;
    padding: 20px;
    position: relative;
}

.testimonials .testimonial-item p::after
{
    border-left: 20px solid transparent;
    border-right: 20px solid transparent;
    border-top: 20px solid #fff;
    bottom: -20px;
    content: "";
    height: 0;
    left: calc( 50% - 20px );
    position: absolute;
    width: 0;
}

.testimonials .swiper-pagination
{
    margin-top: 5px;
    text-align: center;
    position: relative;
}
/* ... */

